# ResourceMonitor

./: .gitignore  CMakeLists.txt  README.md
include/: Consumer.hpp  Consumer.tpp  Event.hpp  EventManager.hpp  FileReader.hpp  Logger.hpp  Producer.hpp  Producer.tpp  TaskQueue.hpp  TaskQueue.tpp  interfaces.hpp
src/: Consumer.cpp  Producer.cpp  TaskQueue.cpp  main.cpp
